--- a/src/Components/Navbar/NavMenu.css
+++ b/src/Components/Navbar/NavMenu.css
@@ -5,7 +5,7 @@
     justify-content: center;
     font-Size: 24px;
     gap: 40px;
-    font-Family: 'Axiforma';
+    font-Family: 'Axiforma-Medium';
   font-Weight: '500';
    word-Wrap: 'break-word';
 }
