--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     background-color: white;
     display:inline-flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     font-Family: 'Axiforma';
-    gap: 307px;
+    
 }
