--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body>div{
+#root{
   width: 1260px;
-  
 }
 body{
   display: flex;
@@ -69,9 +68,47 @@ src:local('Axiforma-SemiBold'),
   font-family: 'Axiforma-SemiBold';
 }
 
+h1, h2, h3, h4{
+  font-family: 'Axiforma-bold';
+  color: #052E14;
+}
+h5, h6{
+  font-family: 'Axiforma-semiBold';
+  color: #052E14;
+}
+h1{
+  font-size: 40px;
+  line-height: 48px;
+}
+h2{
+  font-size: 36px;
+  line-height: 44px;
+}
+h3{
+  font-size: 32px;
+  line-height: 40px;
+}
+h4{
+  font-size: 28px;
+  line-height: 36px;
+}
+h5{
+  font-size: 24px;
+  line-height: 32px;
+}
+h6{
+  font-size: 20px;
+  line-height: 28px;
+}
+p{
+  font-family: 'Axiforma-Regular';
+  font-size: 16px;
+  line-height: 24px;
+  color: #063517;
+}
 
 /* src/styles/custom.css */
-@layer components {
+/* @layer components {
   h1 {
     @apply font-axiforma font-bold text-[#052E14] text-[40px] leading-[48px] md:text-[36px] md:leading-[44px];
   }
@@ -97,6 +134,6 @@ src:local('Axiforma-SemiBold'),
   }
 
   p {
-    @apply font-axiforma font-normal text-[#052E14] text-[16px] leading-[24px] md:text-[14px] md:leading-[20px];
+    @apply font-axiforma font-medium text-[#052E14] text-[16px] leading-[24px] md:text-[14px] md:leading-[20px];
   }
-}
+} */
