--- a/src/Pages/HomePage/HomeComponents/AakarDefination/AakarDefination.css
+++ b/src/Pages/HomePage/HomeComponents/AakarDefination/AakarDefination.css
@@ -1,4 +1,4 @@
-.main-container{
+.main-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -9,36 +9,80 @@
 
 }
 
-.def{
+.def {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     gap: 16px;
-    padding-bottom: 16px; ;
+    padding-bottom: 16px;
+    ;
     text-align: center;
     margin-top: 80px;
 }
-.def h1{
-     
-        padding-bottom: 16px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #052E14;
-       
-        
-      }
-      
-.def p{
+
+.def h1 {
+
+    padding-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #052E14;
+
+
+}
+
+.def p {
     display: flex;
     justify-content: center;
     gap: 10px;
     width: 900px;
     text-align: center;
-   
+
     word-wrap: break-word;
 
 }
 
-    
+.course {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  width: 100%;
+
+}
+
+.course-1, .course-2 {
+    flex: 1;
+    padding: 32px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 10px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 316px;
+  }
+  .course-1 {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.80) 100%), url(C:\Users\karki\Desktop\Aakar\src\assets\JobReady.jpeg);
+  }
+  .course-2 {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.80) 100%), url(C:\Users\karki\Desktop\Aakar\src\assets\Counseling.jpg);
+  }
+  
+
+.course-1 h3,
+.course-2 h3 {
+    color: #F0FDF3;
+    word-wrap: break-word;
+
+}
+.course-1>div, .course-2>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
